--- a/style.css
+++ b/style.css
@@ -59,14 +59,7 @@ button:hover {
     color: white;
 }
 
-/**********funktioner********/
-#itemlist {
-    width: 200px;
-    border: 1px solid black;
-    margin-top: 2px;
-    display: none;
-}
-
+/**********funktion********/
 #showcart {
     width: fit-content;
     border: 1px solid black;
